# LinuxDoctor

./: .gitignore  LICENSE  Makefile  README.md  RELEASE.md  main.py  pyproject.toml
.github/workflows/: ci.yml
data/kb/: cpu.yaml  disk.yaml  dns.yaml  docker.yaml  git.yaml  memory.yaml  network.yaml  nginx.yaml  package.yaml  permissions.yaml  ssh.yaml  systemd.yaml
data/kb/next_gen_schemas/: v1_extended_draft.yaml  v2_advanced_sre.yaml  v3_enterprise_commander.yaml
data/raw/: generate_data.py  linux_issues.jsonl
models/: best_model.pkl  classifier.joblib  eval_report.json  linear_svm.pkl  logistic_regression.pkl  vectorizer.pkl
report_docs/: BAO_CAO_CHI_TIET.md  linux-doctor-presentation-enhanced.md
scripts/: fix_docker_cmds.py  generate_dataset.py  install.sh  test_demo.sh  train.py
src/linux_doctor/: __main__.py
src/linux_doctor/cli/: app.py
src/linux_doctor/config/: settings.py
src/linux_doctor/domain/: models.py
src/linux_doctor/engines/: hypothesis_ranker.py  reasoning_chain.py  rule_engine.py
src/linux_doctor/infrastructure/: kb_loader.py  logger.py  shell_executor.py
src/linux_doctor/ml/: bm25.py  evaluator.py  linear_svm.py  logistic_regression.py  naive_bayes.py  predictor.py  preprocessor.py  text_engine.py  tfidf_engine.py  trainer.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/kb_validation/: test_kb_schema.py
tests/unit/cli/: test_app.py
tests/unit/domain/: test_config.py  test_models.py
tests/unit/engines/: test_hypothesis_ranker.py  test_reasoning_chain.py  test_rule_engine.py
(+11 files in other folders)
