[project]
name = "linux-doctor"
version = "0.1.0"
description = "Linux Troubleshooting Hybrid AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.26.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0.3",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
linux-doctor = "linux_doctor.cli.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linux_doctor"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = []
[tool.ruff.lint.per-file-ignores]
"src/linux_doctor/cli/app.py" = ["E501"]
"src/linux_doctor/engines/hypothesis_ranker.py" = ["E501"]
"src/linux_doctor/infrastructure/database/repository.py" = ["E501"]
"src/linux_doctor/infrastructure/kb_loader.py" = ["E501"]
"src/linux_doctor/ml/evaluator.py" = ["E501"]
"src/linux_doctor/ml/trainer.py" = ["E501"]
"src/linux_doctor/interfaces/cli/repl.py" = ["E501"]
"tests/*" = ["E501"]
"scripts/*" = ["E501"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.0",
]
